<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".about_video"
    >

    <TextView
        android:id="@+id/al_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:id="@+id/al_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_t"
        android:layout_below="@+id/al_txt1"
        />

    <TextView
        android:id="@+id/video_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1 haziran 2014"
        android:layout_below="@+id/al_txt1"
        android:layout_toEndOf="@+id/al_txt2"
        />

    <TextView
        android:id="@+id/al_txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_k"
        android:layout_below="@+id/al_txt2"
        />

    <TextView
        android:id="@+id/video_category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Müzik"
        android:layout_below="@+id/al_txt2"
        android:layout_toEndOf="@+id/al_txt3"
        />

    <TextView
        android:id="@+id/al_txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kanal"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_below="@+id/al_txt3"
        />

    <TextView
        android:id="@+id/al_txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kanal_a"
        android:layout_below="@id/al_txt4"
        />

    <TextView
        android:id="@+id/kanal_abone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10.000"
        android:layout_below="@+id/al_txt4"
        android:layout_toEndOf="@+id/al_txt5"
        />

    <TextView
        android:id="@+id/al_txt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kanal_k"
        android:layout_below="@+id/al_txt5"
        />

    <TextView
        android:id="@+id/kanal_category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Müzik"
        android:layout_below="@+id/al_txt5"
        android:layout_toEndOf="@+id/al_txt6"
        />

</RelativeLayout>