<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".video_unfullscreen"
    android:id="@+id/mn_layout">

    <FrameLayout
        android:id="@+id/video_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        >

        <VideoView
            android:id="@+id/videovw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <ImageButton
            android:id="@+id/start_btn"
            android:contentDescription="@string/kanal_k"
            android:src="@drawable/play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="onButtonClick"
            android:background="@color/unvisible"
            />

        <ImageButton
            android:id="@+id/fs_btn"
            android:contentDescription="@string/kanal_k"
            android:src="@drawable/fs_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:onClick="onButtonClick"
            android:background="@color/unvisible"
            />

        <ImageButton
            android:id="@+id/sets_btn"
            android:contentDescription="@string/kanal_k"
            android:src="@drawable/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:onClick="onSetBtnClick"
            android:background="@color/unvisible"
            />

    </FrameLayout>

    <TextView
        android:id="@+id/video_txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/video_layout"
        android:text="@string/video_name"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        />

    <ImageButton
        android:id="@+id/video_img1"
        android:contentDescription="@string/home_page"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/youtube"
        android:layout_below="@+id/video_txt1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        />

    <TextView
        android:id="@+id/video_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_name"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@+id/video_txt1"
        android:layout_toEndOf="@+id/video_img1"
        android:textColor="@color/black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        />

    <TextView
        android:id="@+id/video_txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/video_watched_add_time"
        android:layout_toEndOf="@+id/video_img1"
        android:layout_below="@+id/video_txt2"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        />

    <ImageButton
        android:id="@+id/likedbtn"
        android:contentDescription="@string/home_page"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/favourite"
        android:layout_below="@+id/video_layout"
        android:layout_alignParentEnd="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:onClick="onLiked"
        />

    <android.support.design.widget.TabLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/tab_layout"
        app:tabMode="fixed"
        app:tabGravity="fill"
        android:layout_below="@+id/video_img1">

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/viewpager"
        android:layout_below="@+id/tab_layout">


    </android.support.v4.view.ViewPager>



</RelativeLayout>