<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/home_list"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/frame1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageButton
                android:id="@+id/hl1_img1"
                android:contentDescription="@string/home_page"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:src="@drawable/background"
                />

            <ImageButton
                android:id="@+id/hl1_img2"
                android:contentDescription="@string/home_page"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="top|start"
                android:src="@drawable/youtube"
                />

            <TextView
                android:id="@+id/hl1_txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_watched_add_time"
                android:layout_gravity="top|end"
                android:textColor="@color/white"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                />

            <TextView
                android:id="@+id/hl1_txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_time"
                android:layout_gravity="bottom|end"
                android:textColor="@color/white"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                />

            <TextView
                android:id="@+id/hl1_txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_and_video_name"
                android:layout_gravity="bottom|start"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/hl2_img1"
                android:contentDescription="@string/home_page"
                android:layout_width="400dp"
                android:layout_height="200dp"
                android:src="@drawable/background"
                />

            <ImageButton
                android:id="@+id/hl2_img2"
                android:contentDescription="@string/home_page"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="top|start"
                android:src="@drawable/youtube"
                />

            <TextView
                android:id="@+id/hl2_txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_watched_add_time"
                android:layout_gravity="top|end"
                android:textColor="@color/white"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                />

            <TextView
                android:id="@+id/hl2_txt2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_time"
                android:layout_gravity="bottom|end"
                android:textColor="@color/white"
                android:paddingStart="0dp"
                android:paddingEnd="5dp"
                android:paddingBottom="5dp"
                />

            <TextView
                android:id="@+id/hl2_txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_and_video_name"
                android:layout_gravity="bottom|start"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                />

        </FrameLayout>

    </LinearLayout>

</ScrollView>